base/app-linkwarden.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
spec:
  tls:
  - secretName: linkwarden-certs
    hosts:
    - linkwarden.kotimme.cc
  rules:
  - host: linkwarden.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkwarden
            port:
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: linkwarden
  type: NodePort

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
  labels:
    app: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  serviceName: "linkwarden"
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
#      securityContext:
#        fsGroup: 1978
#      imagePullSecrets:
#        - name: docker-hub
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: pvc-nfs
          mountPath: /data/data
          subPath: linkwarden/data

      - name: postgres
        image: postgres:17-bookworm
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - name: pvc-nfs
          mountPath: /var/lib/postgresql/data
          subPath: linkwarden/postgres

      volumes:
        - name: pvc-nfs
          persistentVolumeClaim:
           claimName: nfs
